--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-/* @import url(./fonts.css); */
+@import url(./fonts.css);
 
 * {
   margin: 0;
@@ -476,3 +476,6 @@ footer {
 .down2 {
   margin-left: auto;
 }
+/* .img1 {
+  width: 50%;
+} */
