--- a/css/main.css
+++ b/css/main.css
@@ -43,12 +43,94 @@ header {
   border-bottom: 1px solid;
 }
 /* BURGER */
-
-/* .image {
-  width: 100%;
-  height: 100%;
+/* @media (max-width: 1100px) {
+  .burger {
+    display: block;
+  }
 } */
+.burger-checkbox {
+  position: absolute;
+  visibility: hidden;
+}
+.burger {
+  position: relative;
+  z-index: 1;
+  cursor: pointer;
+  display: block;
+  position: relative;
+  border: none;
+  background: transparent;
+  width: 40px;
+  height: 26px;
+  display: none;
+  margin-left: auto;
+}
+.burger::before,
+.burger::after {
+  content: "";
+  left: 0;
+  position: absolute;
+  display: block;
+  width: 100%;
+  height: 4px;
+  border-radius: 10px;
+  background: #000;
+}
+.burger::before {
+  top: 0;
+  box-shadow: 0 11px 0 #000;
+  transition: box-shadow 0.3s 0.15s, top 0.3s 0.15s, transform 0.3s;
+}
+.burger::after {
+  bottom: 0;
+  transition: bottom 0.3s 0.15s, transform 0.3s;
+}
+.burger-checkbox:checked + .burger::before {
+  top: 11px;
+  transform: rotate(45deg);
+  box-shadow: 0 6px 0 rgba(0, 0, 0, 0);
+  transition: box-shadow 0.15s, top 0.3s, transform 0.3s 0.15s;
+  background-color: white;
+}
+.burger-checkbox:checked + .burger::after {
+  bottom: 11px;
+  transform: rotate(-45deg);
+  transition: bottom 0.3s, transform 0.3s 0.15s;
+  background-color: white;
+}
+.menu-list {
+  top: 0;
+  left: 0;
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 100px;
+  padding: 20px 0;
+  margin: 0;
+  background: black;
+  list-style-type: none;
+  transform: translateX(-200%);
+  transition: 0.3s;
+  width: 100%;
+  height: 100vh;
+}
+.menu-item {
+  display: block;
+  padding: 8px;
+  color: white;
+  font-size: 25px;
+  text-align: center;
+  text-decoration: none;
+}
+.menu-item:hover {
+  background: rgba(255, 255, 255, 0.2);
+}
+.burger-checkbox:checked ~ .menu-list {
+  transform: translateX(0);
+}
 
+/* BURGER */
 .header-flex {
   display: flex;
   height: 95px;
@@ -58,7 +140,6 @@ header {
 nav {
   display: flex;
   justify-content: space-between;
-  /* align-items: center; */
   flex-wrap: wrap;
   width: 100%;
   max-width: 600px;
@@ -443,9 +524,9 @@ nav a {
   background-color: #ff9c7d;
 }
 .section12 {
+  padding: 100px 0;
   display: flex;
   flex-direction: column;
-  height: 600px;
   align-items: center;
   justify-content: center;
 }
@@ -532,6 +613,13 @@ footer {
   width: 50%;
 } */
 @media (max-width: 1100px) {
+  .burger {
+    display: block;
+  }
+  nav,
+  .button-flex {
+    display: none;
+  }
   .section1 {
     display: flex;
     margin-top: 100px;
@@ -740,6 +828,9 @@ footer {
   .section11 p {
     font-size: 20px;
   }
+  .section12 {
+    padding: 50px 0;
+  }
   .section12 h2 {
     font-size: 50px;
     max-width: 600px;
@@ -753,5 +844,135 @@ footer {
     gap: 100px;
     border-bottom: 2px solid;
     flex-wrap: wrap;
+  }
+}
+@media (max-width: 430px) {
+  .section1 {
+    margin-top: 50px;
+  }
+  .hero-sec h1 {
+    font-size: 40px;
+    line-height: 40px;
+    max-width: 100%;
+  }
+  .text {
+    font-size: 18px;
+    padding-top: 20px;
+    padding-bottom: 15px;
+    line-height: 25px;
+    max-width: 100%;
+  }
+  /* SECTIONS  */
+  .section2 h2 {
+    font-size: 35px;
+  }
+  .section3 {
+    margin-top: 100px;
+    margin-bottom: 100px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+  .section3-block {
+    margin-right: 0;
+    padding-bottom: 50px;
+  }
+  .section3-block h2 {
+    font-size: 35px;
+    line-height: 40px;
+  }
+  .section3-block p {
+    font-size: 18px;
+  }
+  .section3-block a {
+    font-weight: 600;
+  }
+
+  .section4-block h2 {
+    font-size: 35px;
+    line-height: 40px;
+  }
+  .section4-block p {
+    font-size: 18px;
+  }
+  .section4-block a {
+    font-weight: 600;
+  }
+
+  .section5-block h2 {
+    font-size: 35px;
+    line-height: 40px;
+  }
+  .section5-block p {
+    font-size: 18px;
+  }
+
+  .section6-block h2 {
+    font-size: 35px;
+    line-height: 40px;
+  }
+  .section6-block p {
+    font-size: 18px;
+  }
+  .section7 h2 {
+    padding-top: 50px;
+    padding-bottom: 0px;
+    font-size: 35px;
+  }
+  .section8 h2 {
+    font-size: 35px;
+    line-height: 40px;
+  }
+
+  .sm-cont2 h3 {
+    font-size: 25px;
+  }
+  .sm-cont2 p {
+    font-size: 18px;
+  }
+  .s9-block {
+    padding-bottom: 30px;
+  }
+  .s9-block p {
+    font-size: 20px;
+    padding-bottom: 23px;
+    line-height: 35px;
+  }
+  .section10 {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    justify-content: center;
+    gap: 50px;
+  }
+  .section10 h2 {
+    font-size: 30px;
+    line-height: 35px;
+  }
+
+  .section11 h2 {
+    font-size: 30px;
+    line-height: 40px;
+  }
+  .section11 p {
+    font-size: 18px;
+  }
+  .section12 {
+    padding: 25px 0;
+  }
+  .section12 h2 {
+    font-size: 35px;
+    line-height: 45px;
+  }
+  .container2 {
+    gap: 20px;
+    border-bottom: 2px solid;
+    flex-wrap: wrap;
+  }
+  .div1 a {
+    padding-bottom: 10px;
+  }
+  .down-wrapper {
+    gap: 30px;
   }
 }
